--- a/Proyecto final/index.html
+++ b/Proyecto final/index.html
@@ -6,7 +6,8 @@
     <title>DIGITAL WINE</title>
 </head>
 <body>
-    <h1>Digital wine: La nueva era para vender Vinos Online </h1>
+    <h1>DIGITAL WINE</h1>
+    <h2>Digital wine: La nueva era para vender Vinos Online </h2>
     <p>¿Cansado de depender solo de tiendas físicas y catas presenciales? El mercado del vino se ha movido
         online, pero la experiencia de compra sigue siendo impersonal y genérica. Digital Wine convierte la 
         venta digital en una experiencia premium que enamora a tus clientes.</p>
