Segundo commit: Agregando imagenes y listas desordenadas y ordenadas

--- a/Proyecto final/index.html
+++ b/Proyecto final/index.html
@@ -6,9 +6,28 @@
     <title>DIGITAL WINE</title>
 </head>
 <body>
-    <h1>Digital wine: La nueva era para vender Vinos Online </h1>
+    <h1>DIGITAL WINE</h1>
+       <h2>Digital wine: La nueva era para vender Vinos Online </h2> 
     <p>¿Cansado de depender solo de tiendas físicas y catas presenciales? El mercado del vino se ha movido
         online, pero la experiencia de compra sigue siendo impersonal y genérica. Digital Wine convierte la 
         venta digital en una experiencia premium que enamora a tus clientes.</p>
+        <img src="imagenes/ImagenBienvenida.jpg" alt="Vinos" width="250">
+        <h2>Nuestra propuesta de valor</h2>
+        <p>Digital Wine no es una tienda online más. Es tu equipo de ventas digital 24/7</p>
+        <ul>
+            <li>Catalogo Inteligente: Cada vino cuenta su historia, testimonio de expertos y maridajes interactivos</li>
+            <li>Asistente de Ventas: Recomienda el vino perfecto baso en el gusto, ocacion y presupuesto del cliente</li>
+            <li>Marketing Personalizado: Camapañas automáticas que convierten compradores ocasionales en coleccionistas</li>
+            <img src="imagenes/Imagen2.jpg" alt="Carta" width="250">
+        </ul>
+        <h2>Para el cliente</h2>
+        <ol>
+            <li>Test de preferencias en 2 minutos</li>
+            <li>Entrega garantizada en 24/48 horas</li>
+            <li>Suscripción personalizada según tu ritmo</li>
+            <li>Comunidad exclusiva de Digital Wine</li>
+            <img src="imagenes/Imagen3.jpg" alt="Cliente" width="250">
+        </ol>
+
 </body>
 </html>
