--- a/ProyectoIndividual/index.html
+++ b/ProyectoIndividual/index.html
@@ -6,6 +6,15 @@
     <title>DIGITAL WINE</title>
 </head>
 <body>
+        <nav>
+            <ul>
+                <li><a href="index.html">Bienvenida</a></li>
+                <li><a href="lista.html">Lista de Vinos</a></li>
+                <li><a href="articulo.html">Articulos</a></li>
+                <li><a href="#Contacto">Contactos</a></li>
+            </ul>
+        </nav>
+
     <h1>DIGITAL WINE</h1>
        <h2>Digital wine: La nueva era para vender Vinos Online </h2> 
     <p>¿Cansado de depender solo de tiendas físicas y catas presenciales? El mercado del vino se ha movido
